# githush

./: README.md  githush-config.yaml  pyproject.toml
githush/: __init__.py  cli.py  config.py  githush-config.yaml  scan.py
tests/: test_scan.py
