[project]
name = "githush"
version = "0.1.0"
description = "A CLI tool to scan repositories for secrets"
authors = [{ name = "Alessio Piccione", email = "alessio.piccione@hotmail.it" }]
dependencies = [
    "click>=8.0",
    "pytest",
    "ruff",
    "mypy"
]

[project.scripts]
githush = "githush.cli:main"
