[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "githush"
version = "0.1.0"
readme = "README.md"
requires-python = ">= 3.12"
description = "A CLI tool to scan repositories for secrets"
authors = [{ name = "Alessio Piccione", email = "alessio.piccione@hotmail.it" }]
dependencies = [
    "click>=8.0",
    "pygit2",
    "mypy",
    "pyYAML",
    "rich",
    "ruff",
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
githush = "githush.cli:main"
